--- a/will_i_am_ngarachu/decoder_2by4/Makefile
+++ b/will_i_am_ngarachu/decoder_2by4/Makefile
@@ -8,7 +8,7 @@ decoder:prerequisites
 	@echo 'building file $(@F)'
 	$(CXX) -I/usr/local/systemc-2.3.1/include -O0 -g3 -Wall -c decoder_2by4.cc
 	$(CXX) -L/usr/local/systemc-2.3.1/lib-linux64 -o "$(PROG)" decoder_2by4.o -lsystemc
-	./$(PROG)
+	./$(PROG) 30
 	gtkwave -c 4 timing_diagram.vcd
 
 prerequisites: 
