--- a/gitau_james/decoder_2by4/Makefile
+++ b/gitau_james/decoder_2by4/Makefile
@@ -1,16 +1,15 @@
-#      Makefile
-#      Created on: Nov 15, 2016
-#      Author: GITAU JAMES
+
 
 GTKWAVE := $(shell which gtkwave)
+2by4dec :=decoder
 
 all: decoder
 
 decoder:prerequisites
 	@echo 'building file $(@F)'
 	$(CXX) -I/usr/local/systemc-2.3.1/include -O0 -g3 -Wall -c decoder_2by4.cc
-	$(CXX) -L/usr/local/systemc-2.3.1/lib-linux64 -o "decoder2by4" decoder_2by4.o -lsystemc
-	./decoder
+	$(CXX) -L/usr/local/systemc-2.3.1/lib-linux64 -o "$(2by4dec)" decoder_2by4.o -lsystemc
+	./$(2BY4)
 	gtkwave -c 4 timing_diagram.vcd
 
 prerequisites: 
@@ -18,4 +17,8 @@ ifneq "$(GTKWAVE)" "/usr/bin/gtkwave"
 	@echo 'installing gtkwave, please be patient'
 	sudo apt-get install -y gtkwave
 endif
-.PHONY: decoder2y4
+
+clean:
+	rm *.out *.o *.vcd 
+
+.PHONY: decoder
